# sysprog

./: .gitignore
bcounter/: CMakeLists.txt
bcounter/src/: CMakeLists.txt  file_collector.cpp  file_collector.h  main.cpp  thread_pool.cpp  thread_pool.h
fintercept/: CMakeLists.txt  CMakePresets.json
fintercept/src/fintercept/: CMakeLists.txt  dll_injector.cpp  dll_injector.h  main.cpp
fintercept/src/logger/: CMakeLists.txt  file_call_interceptor.cpp  file_call_interceptor.h  main.cpp
klog/: klog.sln
klog/klog/: klog.vcxproj  main.cpp
klog/klog_driver/: debug_print.c  debug_print.h  klog.c  klog.h  klog_driver.inf  klog_driver.vcxproj  klog_driver.vcxproj.filters
